# nasa_spaceapps

./: .gitignore  CLEANUP_SUMMARY.md  FINAL_GALLERY_SUMMARY.md  GALLERY_FEATURES.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSING_AND_ASSETS.md  MICROSERVICES_SETUP.md  QUICKSTART.md  RAG_GRANULARITY_GUIDE.md  RAG_QUICK_REFERENCE.md  README.md  RETRIEVAL_OPTIONS.md  VIDEO_INTEGRATION.md  VISUAL_ENHANCEMENTS.md  openxr_action_map.tres
3D_mesh_engineering/: README.md  godot_ocean_terrain.gltf  ocean_terrain_to_godot.py  render.blend  render.glb  run_ocean_terrain.sh  setup_blender_env.sh  terrain_to_godot.py
3D_mesh_engineering/data/: normalized_data.tif
3D_mesh_engineering/fish/: Chromis_atrilobata.blend  Chromis_atrilobata.blend1  Chromis_atrilobata.glb  Haemulon_steindachneri.blend  Haemulon_steindachneri.blend1  Haemulon_steindachneri.glb  Paranthias_colonus.blend  Paranthias_colonus.glb  Thalassoma_lucasanum.blend  Thalassoma_lucasanum.blend1  Thalassoma_lucasanum.glb
3D_mesh_engineering/sea_level/: filter_csv.py  plot_csv.py  sea_level.csv  sea_level_filtered.csv  sea_level_rise.py
addons/godot-xr-tools/: plugin.gd.uid  xr_tools.gd.uid
app/: README.md  SETUP.md  agent_audio_pipeline.gd  agent_audio_pipeline.gd.uid  agent_audio_pipeline.tscn  icon.svg.import  knowledge_base.json  main.gd  main.gd.uid  main.tscn  ocean_vr_agent_example.gd  ocean_vr_agent_example.gd.uid  project.godot  speech.mp3.import
app/custom_pluggins/: AUTOLOAD_SETUP.md  GENAI_PIPELINE_GUIDE.md  llm_client.gd  (+13 more)
microservices/: README.md  install_all.bat  install_all.sh  pyproject.toml  start_all.bat  start_all.py  start_all.sh  stop_all.sh
microservices/nasa_spaceapps_microservices.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
microservices/simple_rag/: README.md  __init__.py  app.py  requirements.txt
microservices/tts/: __init__.py  app.py
stt-poc/: default_audio_bus_layout.tres  default_audio_bus_layout.tres198100922.tmp  default_audio_bus_layout.tres225745637.tmp  default_audio_bus_layout.tres234329763.tmp  default_audio_bus_layout.tres242880553.tmp  default_audio_bus_layout.tres4776075982.tmp  icon.svg.import  main.tscn  project.godot  stt_recognizer.gd  stt_recognizer.gd.uid
vr/: main.gd  main.tscn  project.godot  xr_origin_3d.tscn
web/: IMAGE_REPLACEMENTS.md  README.md  README_THEME.md  REFACTOR_SUMMARY.md  package-lock.json  package.json
(+159 files in other folders)
