[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasa-spaceapps-microservices"
version = "0.1.0"
description = "Microservices for NASA Space Apps VR Ocean Museum"
authors = [
    {name = "NASA Space Apps Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    
    # TTS Service dependencies
    "edge-tts>=6.1.0",
    
    # RAG Service dependencies
    "scikit-learn>=1.5.2",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/your-org/nasa-spaceapps"
Repository = "https://github.com/your-org/nasa-spaceapps"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
